try to remove scroll

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ body {
     display: none;
 }
 
+.jumbotron.code-sample div {
+    overflow-y: hidden!important;
+}
+
 .footer {
     border-top: 1px solid #E5E5E5;
     color: #777777;
