--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,13 @@ body {
     font-size: 18px!important;
 }
 
+.performancechart {
+    min-width: 310px;
+    max-width: 800px;
+    height: 400px;
+    margin: 0 auto;
+}
+
 .footer {
     border-top: 1px solid #E5E5E5;
     color: #777777;
